--- a/blog2.html
+++ b/blog2.html
@@ -86,27 +86,28 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="sofax-inner-blog-wrap wow fadeInUpX">
-            <div class="sofax-inner-blog-img">
-              <img src="assets/images/v5/Zoho-CRM-overview.jpeg" alt="Zoho">
+            <div class="sofax-inner-blog-img" style="display: flex; align-items: center; justify-content: center;">
+              <img src="assets/images/v5/Zoho marketing.png" alt="Zoho" style="max-width: 350px; ">
             </div>
             <div class="sofax-inner-blog-content">
               <div class="sofax-inner-blog-meta">
                 <a href="single-blog.html">
-                  <h5>Gestion</h5>
+                  <h5>Blog, Marketing Digital</h5>
                   <ul>
-                    <li>20 janvier 2025</li>
+                    <li>10 janvier 2025</li>
                   </ul>
                 </a>
               </div>
               <div class="sofax-inner-blog-text">
-                <a href="single-blog.html">
-                  <h3>Comment Zoho CRM Révolutionne la Gestion des Entreprises</h3>
+                <a href="single-blog3.html">
+                  <h3>Campagnes Marketing : Automatisation et Stratégies Multicanales</h3>
                 </a>
-                <p>Dans un monde où l'efficacité et l'automatisation sont devenues essentielles, Zoho CRM s’impose comme une solution incontournable pour les entreprises souhaitant optimiser leur gestion de la relation client.</p>
+                <p>Lorsqu’on explore les outils de marketing digital, deux approches reviennent souvent : les campagnes d’e-mails et de SMS ciblées, et les stratégies d’automatisation multicanales.</p>
               </div>
-              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
+              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog3.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
             </div>
           </div>
+          <!--
           <div class="sofax-inner-blog-wrap wow fadeInUpX">
             <div class="sofax-inner-blog-img">
               <img src="assets/images/v5/Comment-utiliser-Zoho-CRM.png" alt="Zoho Crm">
@@ -150,7 +151,7 @@
               </div>
               <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog2.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
             </div>
-          </div>
+          </div>-->
           <div class="sofax-navigation">
             <nav class="navigation pagination" aria-label="Posts">
               <div class="nav-links">
@@ -159,10 +160,10 @@
                             <img src="assets/images/blog/left-arrow.png" alt="">
                           </i>
                 </a> -->
-                <span aria-current="page" class="page-numbers current">1</span>
+                <a aria-current="page" class="page-numbers" href="blog.html">1</a>
                 
-                <a class="page-numbers" href="blog2.html">2</a>
-                <!--<a class="page-numbers" href="">3</a> 
+                <a aria-current="page" class="page-numbers current" href="blog2.html">2</a><!--
+                <a class="page-numbers" href="">3</a>
                 <a class="next page-numbers" href="">
                   <i class="ri-arrow-right-s-line">
                             <img src="assets/images/blog/right-arrow.png" alt="">
