--- a/single-blog3.html
+++ b/single-blog3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -58,7 +58,7 @@
         <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
       </svg>
       <div class="top-arrow">
-        <img src="assets/images/arrowtop.png" alt="Fleche">
+        <img src="assets/images/arrowtop.png" alt="">
       </div>
     </div>
   </div>
@@ -67,14 +67,16 @@
 
   <div id="header-container"></div>
 
+
+
   <div class="sofax-breadcrumb">
     <div class="container">
-      <h1 class="post__title">Notre blog</h1>
+      <h1 class="post__title">Blog</h1>
       <nav class="breadcrumbs">
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><img src="assets/images/about/arrow.png" alt="Fleche"></li>
-          <li aria-current="page"> Notre blog</li>
+          <li><img src="assets/images/about/arrow.png" alt=""></li>
+          <li aria-current="page"> Campagnes Marketing : Automatisation et Stratégies Multicanales</li>
         </ul>
       </nav>
 
@@ -85,156 +87,53 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
-          <div class="sofax-inner-blog-wrap wow fadeInUpX">
-            <div class="sofax-inner-blog-img">
-              <img src="assets/images/v5/Zoho-CRM-overview.jpeg" alt="Zoho">
+          <div class="sofax-inner-blog-details-wrap">
+            <div class="sofax-inner-blog-details-img wow fadeInUpX" style="display: flex; align-items: center; justify-content: center;">
+              <img src="assets/images/v5/Zoho marketing.png" alt="Crm" style="max-width: 400px;">
             </div>
-            <div class="sofax-inner-blog-content">
-              <div class="sofax-inner-blog-meta">
-                <a href="single-blog.html">
-                  <h5>Gestion</h5>
-                  <ul>
-                    <li>20 janvier 2025</li>
-                  </ul>
-                </a>
-              </div>
-              <div class="sofax-inner-blog-text">
-                <a href="single-blog.html">
-                  <h3>Comment Zoho CRM Révolutionne la Gestion des Entreprises</h3>
-                </a>
-                <p>Dans un monde où l'efficacité et l'automatisation sont devenues essentielles, Zoho CRM s’impose comme une solution incontournable pour les entreprises souhaitant optimiser leur gestion de la relation client.</p>
-              </div>
-              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
+            <div class="sofax-inner-blog-details-content">
+              <h3>Introduction</h3>
+              <p>Lorsqu’on explore les outils de marketing digital, deux approches reviennent souvent : les campagnes d’e-mails et de SMS ciblées, et les stratégies d’automatisation multicanales. Chacune de ces méthodes répond à des besoins spécifiques et peut avoir un impact significatif sur la relation client et la conversion des prospects. Voyons comment choisir la bonne stratégie selon les objectifs de votre entreprise.</p>
             </div>
-          </div>
-          <div class="sofax-inner-blog-wrap wow fadeInUpX">
-            <div class="sofax-inner-blog-img">
-              <img src="assets/images/v5/Comment-utiliser-Zoho-CRM.png" alt="Zoho Crm">
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>Campagnes de Marketing Direct : Simplicité et Efficacité</h4>
+              <p>Si votre objectif principal est d’envoyer des communications ciblées par e-mail et SMS, une plateforme dédiée aux campagnes marketing est un excellent choix. Ces outils sont conçus pour les entreprises qui cherchent à optimiser leurs interactions avec leurs clients et prospects de manière simple et efficace. Que ce soit pour la prospection, l’information sur de nouveaux produits ou services, ou encore la communication interne, un bon outil de campagnes marketing vous offre les fonctionnalités essentielles.</p>
+              <p><strong>Les avantages d’un outil de campagnes marketing :</strong></p>
+              <ul>
+                <li><strong>Segmentation des contacts</strong> : Organisez facilement votre base de données en segments spécifiques pour envoyer des messages adaptés à chaque audience.</li>
+                <li><strong>Automatisation des envois</strong> : Planifiez et automatisez vos campagnes d’e-mails et de SMS en fonction du comportement des contacts.</li>
+                <li><strong>Intégration CRM</strong> : Synchronisez vos contacts et suivez les performances de vos campagnes pour assurer une cohérence entre le marketing et la vente.</li>
+              </ul>
             </div>
-            <div class="sofax-inner-blog-content">
-              <div class="sofax-inner-blog-meta">
-                <a href="single-blog1.html">
-                  <h5>Business</h5>
-                  <ul>
-                    <li>23 janvier 2025</li>
-                  </ul>
-                </a>
-              </div>
-              <div class="sofax-inner-blog-text">
-                <a href="single-blog1.html">
-                  <h3>Les Meilleures Pratiques pour Optimiser Zoho CRM et Maximiser vos Résultats</h3>
-                </a>
-                <p>Mettre en place Zoho CRM est une excellente décision, mais pour en tirer le meilleur parti, il est crucial de bien le configurer et de l’adapter aux besoins spécifiques de votre entreprise.</p>
-              </div>
-              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog1.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
+            <div class="sofax-inner-blog-details-content2 light-color">
+              <h3>"Expertise reconnue : Partenaire Zoho Premium avec des années d’expérience en intégration CRM."</h3>
             </div>
-          </div>
-          <div class="sofax-inner-blog-wrap wow fadeInUpX">
-            <div class="sofax-inner-blog-img">
-              <img src="assets/images/v5/imagesadn.png" alt="AdnAgile">
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>Automatisation Marketing : Une Vision Multicanale et Stratégique</h4>
+              <p>Si votre entreprise adopte une approche plus avancée du marketing digital, les solutions d’automatisation offrent une gestion plus complète de l’acquisition et de la fidélisation des clients. Une plateforme d’automatisation marketing permet de suivre le parcours client sur plusieurs canaux, d’analyser les comportements en ligne et d’adapter les interactions en conséquence.</p>
+              <p><strong>Les fonctionnalités clés d’un outil d’automatisation marketing :</strong></p>
+              <ul>
+                <li><strong>Gestion multicanale </strong>: Automatisez vos campagnes sur divers supports (e-mails, SMS, WhatsApp, réseaux sociaux, site web, etc.).</li>
+                <li><strong>Suivi des visiteurs web </strong>: Analysez le comportement des internautes sur votre site pour créer des scénarios de conversion basés sur leurs interactions.</li>
+                <li><strong>Qualification des prospects</strong> : Segmentez et évaluez vos contacts en fonction de critères précis (comportement, activité de messagerie, données CRM).</li>
+                <li><strong>Parcours clients personnalisés</strong> : Construisez des tunnels de conversion dynamiques avec des points de contact stratégiques.</li>
+              </ul>
             </div>
-            <div class="sofax-inner-blog-content">
-              <div class="sofax-inner-blog-meta">
-                <a href="single-blog2.html">
-                  <h5>Intégration</h5>
-                  <ul>
-                    <li>10 fevrier 2025</li>
-                  </ul>
-                </a>
-              </div>
-              <div class="sofax-inner-blog-text">
-                <a href="single-blog2.html">
-                  <h3>Pourquoi AdnAgile est le Partenaire Idéal pour l’Intégration de Zoho CRM</h3>
-                </a>
-                <p>Choisir un CRM est une chose, l’intégrer efficacement dans son organisation en est une autre. Chez AdnAgile, nous accompagnons nos clients dans la mise en place de Zoho CRM, de l’installation à l’optimisation avancée.</p>
-              </div>
-              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog2.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>Comment choisir la bonne solution ?</h4>
+              <p>La clé pour faire le bon choix est d’identifier les besoins spécifiques de votre entreprise. Si votre stratégie marketing repose essentiellement sur l’envoi d’e-mails et de SMS ciblés, une plateforme de campagnes marketing simple et intuitive est suffisante. En revanche, si vous souhaitez intégrer une stratégie digitale plus globale, impliquant plusieurs canaux et une analyse comportementale approfondie, une solution d’automatisation sera plus adaptée.</p>
             </div>
-          </div>
-          <div class="sofax-navigation">
-            <nav class="navigation pagination" aria-label="Posts">
-              <div class="nav-links">
-                <!-- <a class="next page-numbers" href="">
-                  <i class="ri-arrow-left-s-line">
-                            <img src="assets/images/blog/left-arrow.png" alt="">
-                          </i>
-                </a> -->
-                <span aria-current="page" class="page-numbers current">1</span>
-                
-                <a class="page-numbers" href="blog2.html">2</a>
-                <!--<a class="page-numbers" href="">3</a> 
-                <a class="next page-numbers" href="">
-                  <i class="ri-arrow-right-s-line">
-                            <img src="assets/images/blog/right-arrow.png" alt="">
-                          </i>
-                </a>-->
-              </div>
-            </nav>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="sofax-inner-blog-sidebar-menu">
-            <div class="sofax-subscription-field-inner">
-              <input type="email" placeholder="Serach">
-              <div class="search-icon-img">
-                <a href="https://www.google.com/"><img src="assets/images/blog/search-icon.png" alt="Icone"></a>
-              </div>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>Conclusion</h4>
+              <ul><li>Optez pour une solution de campagnes marketing si vous souhaitez une plateforme simple et efficace pour gérer vos communications par e-mail et SMS.</li>
+            <li>Adoptez une solution d’automatisation marketing si vous avez besoin d’une approche plus stratégique, incluant le suivi du comportement en ligne et une segmentation avancée des prospects.</li></ul>
+            <p>Quelle que soit votre stratégie, l’essentiel est de garantir une cohérence entre vos efforts marketing et votre gestion commerciale afin d’optimiser vos conversions et de renforcer la fidélisation de vos clients.</p>
             </div>
 
-            <div class="sofax-subscription-field-post">
-              <h4>Récents : </h4>
-              <a href="single-blog.html">
-                <div class="title-post-thumb">
-                  <div class="title-post-img">
-                    <img src="assets/images/v5/Zoho-CRM-overview.jpeg" alt="Crm">
-                  </div>
-                  <div class="title-post-content">
-                    <ul>
-                      <li>20 janvier 2025</li>
-                    </ul>
-                    <h6> Comment Zoho CRM Révolutionne la Gestion des Entreprises</h6>
-                  </div>
-                </div>
-              </a>
-              <a href="single-blog1.html">
-                <div class="title-post-thumb">
-                  <div class="title-post-img">
-                    <img src="assets/images/v5/Comment-utiliser-Zoho-CRM.png" alt="Crm">
-                  </div>
-                  <div class="title-post-content">
-                    <ul>
-                      <li>23 janvier 2025</li>
-                    </ul>
-                    <h6>Les Meilleures Pratiques pour Optimiser Zoho CRM et Maximiser vos Résultats</h6>
-                  </div>
-                </div>
-              </a>
-              <a href="single-blog2.html">
-                <div class="title-post-thumb">
-                  <div class="title-post-img">
-                    <img src="assets/images/v5/imagesadn.png" alt="Crm">
-                  </div>
-                  <div class="title-post-content">
-                    <ul>
-                      <li>10 fevrier 2025</li>
-                    </ul>
-                    <h6> Pourquoi AdnAgile est le Partenaire Idéal pour l’Intégration de Zoho CRM</h6>
-                  </div>
-                </div>
-              </a>
-            </div>
-           <!--
-            <div class="sofax-subscription-field-blog-inner-footer light-color">
-              <h4>Subscribe to our newsletter</h4>
-              <div class="sofax-subscription-field-inner-button">
-                <form action="#">
-                  <input type="email" placeholder="Enter your email address">
-                  <button class="sofax-subcribe-btn2 subscription-btn-hover">Subscribe now</button>
-                </form>
-              </div>
-            </div>
-            -->
           </div>
+
+
+
         </div>
       </div>
     </div>
@@ -244,7 +143,7 @@
     <div class="sofax-slider-service-section">
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Fleche CRM">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
           <h2>Digital Marketing Agency</h2>
@@ -252,7 +151,7 @@
       </div>
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Icone">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
           <h2>Start Up Business</h2>
@@ -260,18 +159,18 @@
       </div>
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Icone">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
-          <h2>Social Media Markating</h2>
+          <h2>Social Media Marketing</h2>
         </div>
       </div>
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Icone">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
-          <h2>Social Media Markating</h2>
+          <h2>Social Media Marketing</h2>
         </div>
       </div>
     </div>
@@ -287,10 +186,10 @@
               <h2>Faites confiance à notre expertise pour vous accompagner tout au long de ce parcours digital.</h2>
             </div>
             <div class="sofax-footer-shapev5">
-              <img src="assets/images/v5/shape1.png" alt="Fleche">
+              <img src="assets/images/v5/shape1.png" alt="">
             </div>
             <div class="sofax-footer-shape2v5">
-              <img src="assets/images/v5/shape3.png" alt="Icone">
+              <img src="assets/images/v5/shape3.png" alt="">
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 d-flex align-items-center justify-content-end">
@@ -310,7 +209,7 @@
         <div class="row">
           <div class="col-xl-4 col-md-12">
             <div class="sofax-footer-wrap mr-25">
-              <a href="index.html"><img src="assets/images/v5/logo.jpeg" alt="Logo"></a>
+              <a href="index.html"><img src="assets/images/v5/logo.jpeg" alt=""></a>
               <p>Envie d'explorer le monde Crm, de préparer votre voyage ?
                 ADN Agile sera votre sherpa</p>
               <!--
