--- a/blog.html
+++ b/blog.html
@@ -86,6 +86,50 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="sofax-inner-blog-wrap wow fadeInUpX">
+            <div class="sofax-inner-blog-img" style="display: flex; align-items: center; justify-content: center;">
+              <img src="assets/images/v5/Zoho marketing.png" alt="Zoho" style="max-width: 350px; ">
+            </div>
+            <div class="sofax-inner-blog-content">
+              <div class="sofax-inner-blog-meta">
+                <a href="single-blog.html">
+                  <h5>Blog, Marketing Digital</h5>
+                  <ul>
+                    <li>10 mars 2025</li>
+                  </ul>
+                </a>
+              </div>
+              <div class="sofax-inner-blog-text">
+                <a href="single-blog3.html">
+                  <h3>Campagnes Marketing : Automatisation et Stratégies Multicanales</h3>
+                </a>
+                <p>Lorsqu’on explore les outils de marketing digital, deux approches reviennent souvent : les campagnes d’e-mails et de SMS ciblées, et les stratégies d’automatisation multicanales.</p>
+              </div>
+              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog3.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
+            </div>
+          </div>
+          <div class="sofax-inner-blog-wrap wow fadeInUpX">
+            <div class="sofax-inner-blog-img" style="display: flex; align-items: center; justify-content: center;">
+              <img src="assets/images/v5/Editeur-integrateur-ERP.png" alt="Zoho" style="max-width: 350px; ">
+            </div>
+            <div class="sofax-inner-blog-content">
+              <div class="sofax-inner-blog-meta">
+                <a href="single-blog.html">
+                  <h5>Blog, Marketing Digital</h5>
+                  <ul>
+                    <li>22 fevrier 2025</li>
+                  </ul>
+                </a>
+              </div>
+              <div class="sofax-inner-blog-text">
+                <a href="single-blog4.html">
+                  <h3>L'Importance de Passer par un Intégrateur Zoho CRM</h3>
+                </a>
+                <p>Dans le paysage concurrentiel d'aujourd'hui, la gestion efficace des relations clients est cruciale pour toute entreprise cherchant à se développer et à fidéliser sa clientèle. Zoho CRM, avec sa vaste gamme de fonctionnalités, s'impose comme l'une des solutions les plus complètes et polyvalentes du marché. Cependant, pour exploiter pleinement son potentiel, le recours à un intégrateur Zoho CRM se révèle être un choix stratégique judicieux.</p>
+              </div>
+              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog3.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
+            </div>
+          </div>
+          <div class="sofax-inner-blog-wrap wow fadeInUpX">
             <div class="sofax-inner-blog-img">
               <img src="assets/images/v5/Zoho-CRM-overview.jpeg" alt="Zoho">
             </div>
@@ -107,6 +151,7 @@
               <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
             </div>
           </div>
+          <!--
           <div class="sofax-inner-blog-wrap wow fadeInUpX">
             <div class="sofax-inner-blog-img">
               <img src="assets/images/v5/Comment-utiliser-Zoho-CRM.png" alt="Zoho Crm">
@@ -150,7 +195,7 @@
               </div>
               <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog2.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
             </div>
-          </div>
+          </div>-->
           <div class="sofax-navigation">
             <nav class="navigation pagination" aria-label="Posts">
               <div class="nav-links">
@@ -159,10 +204,10 @@
                             <img src="assets/images/blog/left-arrow.png" alt="">
                           </i>
                 </a> -->
-                <span aria-current="page" class="page-numbers current">1</span>
+                <a aria-current="page" class="page-numbers" href="blog.html">1</a>
                 
-                <a class="page-numbers" href="blog2.html">2</a>
-                <!--<a class="page-numbers" href="">3</a> 
+                <a aria-current="page" class="page-numbers current" href="blog2.html">2</a><!--
+                <a class="page-numbers" href="">3</a>
                 <a class="next page-numbers" href="">
                   <i class="ri-arrow-right-s-line">
                             <img src="assets/images/blog/right-arrow.png" alt="">
