--- a/single-blog5.html
+++ b/single-blog5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -58,7 +58,7 @@
         <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
       </svg>
       <div class="top-arrow">
-        <img src="assets/images/arrowtop.png" alt="Fleche">
+        <img src="assets/images/arrowtop.png" alt="">
       </div>
     </div>
   </div>
@@ -67,29 +67,83 @@
 
   <div id="header-container"></div>
 
+
+
   <div class="sofax-breadcrumb">
     <div class="container">
-      <h1 class="post__title">Notre blog</h1>
+      <h1 class="post__title">Blog</h1>
       <nav class="breadcrumbs">
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><img src="assets/images/about/arrow.png" alt="Fleche"></li>
-          <li aria-current="page"> Notre blog</li>
+          <li><img src="assets/images/about/arrow.png" alt=""></li>
+          <li aria-current="page">Pourquoi choisir une agence Partner Zoho pour optimiser votre transformation digitale ?</li>
         </ul>
       </nav>
 
     </div>
   </div>
   <!-- End breadcrumb -->
-  <div id="blog-container" style="max-width: 65%; display: flex; flex-direction: column; justify-content: center; align-items: center;"></div>
-  <div id="pagination" class="sofax-navigation"></div>
-  <script src="script2.js"></script>
+  <section class="sofax-section-padding2">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="sofax-inner-blog-details-wrap">
+            <div class="sofax-inner-blog-details-img wow fadeInUpX" style="display: flex; align-items: center; justify-content: center;">
+              <img src="assets/images/v5/premium partner.png" alt="Crm" style="max-width: 400px;">
+            </div>
+            <div class="sofax-inner-blog-details-content">
+              <h3>Introduction</h3>
+              <p>Dans un monde où la digitalisation des entreprises est devenue un enjeu clé, s'entourer des bons outils et des bons partenaires est essentiel. Zoho, une suite logicielle complète dédiée à la gestion des entreprises, s'impose comme une solution incontournable pour améliorer la productivité et l'efficacité des organisations. Mais pour tirer pleinement parti de cette plateforme, faire appel à une agence Partner Zoho présente de nombreux avantages.</p>
+            </div>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4> Une expertise certifiée</h4>
+              <p>En tant qu'agence Partner Zoho, nous avons une connaissance approfondie de l’ensemble des solutions proposées par Zoho : CRM, gestion de projet, finance, marketing automation, et bien d'autres. Nos experts sont formés et certifiés pour vous accompagner dans l’implémentation et l’optimisation de ces outils en fonction de vos besoins spécifiques.</p>
+
+            </div>
+            <div class="sofax-inner-blog-details-content2 light-color">
+              <h3>" Nos experts sont formés et certifiés pour vous accompagner dans l’implémentation et l’optimisation de ces outils en fonction de vos besoins spécifiques."</h3>
+            </div>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>Un accompagnement sur mesure</h4>
+              <p>Chaque entreprise a ses propres défis et objectifs. Grâce à notre statut de Partner Zoho, nous proposons des solutions adaptées à votre activité, qu’il s’agisse de personnaliser votre CRM, d’automatiser vos processus métier ou encore d’intégrer Zoho avec vos autres logiciels. Nous nous engageons à comprendre votre environnement pour vous fournir une solution sur-mesure et évolutive.</p>
+            </div>
+            <div class="sofax-inner-blog-details-content-data">
+                <h4>Un gain de temps et d’efficacité</h4>
+                <p>Lancer une solution Zoho sans accompagnement peut s’avérer complexe et chronophage. Notre expertise vous permet de gagner du temps en évitant les erreurs courantes et en assurant une mise en place rapide et efficace. De plus, nous vous formons à l'utilisation optimale des outils Zoho, afin que vous puissiez en exploiter tout le potentiel dès le premier jour.</p>
+              </div>
+              <div class="sofax-inner-blog-details-content-data">
+                <h4>Une optimisation continue</h4>
+                <p>Nos services ne s'arrêtent pas à l’implémentation. Nous assurons un suivi régulier pour optimiser vos processus, vous proposer des mises à jour et des évolutions adaptées à vos besoins. Grâce à une veille technologique constante, nous vous aidons à rester compétitif en profitant des dernières innovations proposées par Zoho.</p>
+              </div>
+              <div class="sofax-inner-blog-details-content-data">
+                <h4>Un support dédié</h4>
+                <p>En cas de question ou de problème, notre équipe est là pour vous accompagner. En tant que Partner Zoho, nous avons un accès privilégié aux ressources et au support Zoho, ce qui nous permet de résoudre vos problématiques rapidement et efficacement.</p>
+              </div>
+              <div class="sofax-inner-blog-details-content-data">
+                <h4>Conclusion</h4>
+                <p>Choisir une agence Partner Zoho, c’est opter pour une expertise reconnue, un accompagnement sur mesure et un gain de temps précieux pour votre entreprise. Que vous soyez une PME, une start-up ou une grande entreprise, nous vous aidons à tirer le meilleur parti des solutions Zoho pour optimiser votre gestion et accélérer votre croissance.
+
+                    Vous souhaitez en savoir plus ? Contactez-nous dès aujourd’hui pour échanger sur vos besoins et découvrir comment Zoho peut transformer votre entreprise !
+                    
+                    </p>
+              </div>
+       
+
+
+          </div>
+
+
+
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- end section -->
   <section class="sofax-service-slider">
     <div class="sofax-slider-service-section">
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Fleche CRM">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
           <h2>Digital Marketing Agency</h2>
@@ -97,7 +151,7 @@
       </div>
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Icone">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
           <h2>Start Up Business</h2>
@@ -105,18 +159,18 @@
       </div>
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Icone">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
-          <h2>Social Media Markating</h2>
+          <h2>Social Media Marketing</h2>
         </div>
       </div>
       <div class="sofax-service-slider-wrap">
         <div class="sofax-service-slider-icon">
-          <img src="assets/images/service/icon1.png" alt="Icone">
+          <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
-          <h2>Social Media Markating</h2>
+          <h2>Social Media Marketing</h2>
         </div>
       </div>
     </div>
@@ -132,10 +186,10 @@
               <h2>Faites confiance à notre expertise pour vous accompagner tout au long de ce parcours digital.</h2>
             </div>
             <div class="sofax-footer-shapev5">
-              <img src="assets/images/v5/shape1.png" alt="Fleche">
+              <img src="assets/images/v5/shape1.png" alt="">
             </div>
             <div class="sofax-footer-shape2v5">
-              <img src="assets/images/v5/shape3.png" alt="Icone">
+              <img src="assets/images/v5/shape3.png" alt="">
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 d-flex align-items-center justify-content-end">
@@ -155,7 +209,7 @@
         <div class="row">
           <div class="col-xl-4 col-md-12">
             <div class="sofax-footer-wrap mr-25">
-              <a href="index.html"><img src="assets/images/v5/logo.jpeg" alt="Logo"></a>
+              <a href="index.html"><img src="assets/images/v5/logo.jpeg" alt=""></a>
               <p>Envie d'explorer le monde Crm, de préparer votre voyage ?
                 ADN Agile sera votre sherpa</p>
               <!--
@@ -277,7 +331,6 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyArZVfNvjnLNwJZlLJKuOiWHZ6vtQzzb1Y"></script>
 
   <script src="assets/js/app.js"></script>
-
 
 </body>
 
