--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ADN Agile vous accompagne sur toute la durée
+  Intégration & Exploitation de votre CRM">
   <title>AdnAgile || Sublimons vos savoir-faire</title>
-
+  <link rel="canonical" href="https://adnagile.com/blog">
   <link rel="shortcut icon" href="assets/images/v5/logo.ico" type="image/x-icon">
   <link rel="icon" href="assets/images/v5/logo.ico" type="image/x-icon">
   <!--- End favicon-->
