--- a/contact-us.html
+++ b/contact-us.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>sofax || Responsive HTML 5 Template</title>
-
+  <meta name="description" content="ADN Agile vous accompagne sur toute la durée
+  Intégration & Exploitation de votre CRM">
+  <link rel="canonical" href="https://adnagile.com/contact-us">
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
   <!--- End favicon-->
