--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/images/v5/logo.ico" type="image/x-icon">
   <link rel="icon" href="assets/images/v5/logo.ico" type="image/x-icon">
   <!--- End favicon-->
-
+  <link rel="canonical" href="https://adnagile.com/team">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <!-- End google font  -->
 
